--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "node-fetch": "^3.3.1"
   },
   "scripts": {
-    "update-leetcode": "node scripts/update_leetcode.js"
+    "update-leetcode": "node scripts/update_leetcode.mjs"
   }
 }
