--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "dependencies": {
-    "chart.js": "^4.4.9",
-    "node-fetch": "^3.3.1"
-  },
+  "name": "portfolio-data-updater",
+  "version": "1.0.0",
+  "description": "Portfolio website with cached API data",
+  "main": "index.html",
   "scripts": {
-    "update-leetcode": "node scripts/update_leetcode.mjs",
-    "update-leetcode-backup": "node scripts/update_leetcode_backup.js"
-  }
+    "update-data": "node .github/workflows/update-data.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
+  },
+  "devDependencies": {},
+  "keywords": ["portfolio", "github-actions", "api-cache"],
+  "author": "Rahul Challa",
+  "license": "MIT"
 }
