--- a/.github/workflows/update-api-data.yml
+++ b/.github/workflows/update-api-data.yml
@@ -239,7 +239,14 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         
+        # Always pull the latest changes first to avoid conflicts
+        echo "Pulling latest changes from remote..."
+        git pull origin main
+        
+        # Now add and commit our changes
         git add data/
         git commit --allow-empty -m "Update API data - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+        
+        # Push should now work since we're up-to-date
         git push origin main
         echo "Successfully updated and pushed API data"
